--- a/part-4.html
+++ b/part-4.html
@@ -253,7 +253,7 @@
             <p>This final chapter helps you apply the knowledge you gained in the individual assignment to start working on the group assignment.</p>
             <ul>
               <li>First, we provide a brief reminder of the design process, and the deliverables you will have to provide for the justification document.</li>
-              <li>In the next section, we guide you’ through the templates that we’ve developed for the course.</li>
+              <li>In the next section, we guide you through the templates that we’ve developed for the course.</li>
               <li>Then you learn how to implement common UX patterns using Bootstrap.</li>
               <li>One of these patterns is the grid, which is so important we gave it its own section.</li>
               <li>Finally, you get some tips on how to collaborate efficiently and avoid errors.</li>
@@ -263,10 +263,12 @@
             <h3 class="text-center">What you need to do</h3>
             <p>This part of the guide will support you in completing the group assignment:</p>
             <ul>
-              <li>You start by making design decisions and thinking about what your website will contain, how it should be navigated, and how it should look like.</li>
-              <li>The justification document will contain information about your design decisions and. Build upon the content from PRO1 and PRJ1 to write this document.</li>
-              <li>To start the actual development work, copy the template and create your own group repository &ndash; choose the name carefully so your website’s URL reflects the name of your brand. This is explained in Chapter 1.</li>
-              <li></li>
+              <li>You can start design and website development in parallel.</li>
+              <li>Once you have a name and logo, <strong>copy the template</strong> and create your own group repository &ndash; choose the name carefully so your website’s URL reflects the name of your brand..</li>
+              <li>Deliver a <strong>landing page</strong> that you can integrate in your <strong>marketing and communication strategy</strong>, then build the rest of the website over time.</li>
+              <li>In parallel, make <strong>design decisions</strong> and think about what your website will contain, how it should be navigated, and how it should look like.</li>
+              <li>Once you have a website ready and online, you can <strong>test it</strong> carefully. Use the guidelines provided in PRJ1 (or below on this page) for testing</li>
+              <li>The <strong>justification document</strong> will contain information about your design decisions and the testing report.</li>
             </ul>
           </div>
         </article>
@@ -410,11 +412,11 @@
           </div>
           <div class="col-md-6 col-xxl-5 py-3 bg-lightblue">
             <h3 class="text-center">Deadlines</h3>
-            <p>The full website and justification document will be due on the final deadline of <strong>Thursday 14 April 2022</strong>. There are some intermediary deadlines for your progress on the website:</p>
+            <p>The full website and justification document will be due on the final deadline of <strong>Thursday 14 April 2023</strong>. There are some intermediary deadlines for your progress on the website:</p>
             <ul>
               <li>At the end of <strong>Project Week 5</strong> <em>(13 – 17 March 2023)</em>, you must have a <strong>landing page</strong> ready and published online, which only needs to include the name, logo and colours of your brand. This means that you already have an address for the website, and you can actively use it in your marketing campaign.</li>
               <li>During <strong>Project Week 7</strong> <em>(27 – 31 March 2023)</em>, you should have progressed on your website enough to perform usability testing. This is self-directed work that you must plan yourselves.</li>
-              <li>During <strong>Project Week 8</strong> <em>(3 – 6 April 2022)</em>, you will receive final feedback on your design and your justification document.</li>
+              <li>During <strong>Project Week 8</strong> <em>(3 – 6 April 2023)</em>, you will receive final feedback on your design and your justification document.</li>
               <li>On <strong>Friday 14 April</strong>, you deliver the final website.</li>
             </ul>
             <p>The retake deadline is at the end of the semester, on <strong>Friday 16 June 2023</strong>.</p>
