--- a/checklist-individual.html
+++ b/checklist-individual.html
@@ -138,19 +138,19 @@
               <a class="dropdown-item" href="part-4.html#overview_goals"><span class="badge rounded-pill bg-buas">4.1</span> Overview & goals</a>
             </li>
             <li>
-              <a class="dropdown-item" href="part-4.html#web_design"><span class="badge rounded-pill bg-buas">4.2</span> Your design process</a>
+              <a class="dropdown-item" href="part-4.html#getting_started"><span class="badge rounded-pill bg-buas">4.2</span> Getting started and working together</a>
             </li>
             <li>
-              <a class="dropdown-item" href="part-4.html#templates"><span class="badge rounded-pill bg-buas">4.3</span> A tour of our templates</a>
+              <a class="dropdown-item" href="part-4.html#web_design"><span class="badge rounded-pill bg-buas">4.3</span> Your design process</a>
             </li>
             <li>
-              <a class="dropdown-item" href="part-4.html#ux_patterns"><span class="badge rounded-pill bg-buas">4.4</span> UX Patterns for the web</a>
+              <a class="dropdown-item" href="part-4.html#templates"><span class="badge rounded-pill bg-buas">4.4</span> A tour of our templates</a>
             </li>
             <li>
-              <a class="dropdown-item" href="part-4.html#bootstrap_grid"><span class="badge rounded-pill bg-buas">4.5</span> The Bootstrap Grid</a>
+              <a class="dropdown-item" href="part-4.html#ux_patterns"><span class="badge rounded-pill bg-buas">4.5</span> UX Patterns for the web</a>
             </li>
             <li>
-              <a class="dropdown-item" href="part-4.html#collaboration"><span class="badge rounded-pill bg-buas">4.6</span> Tips for collaboration</a>
+              <a class="dropdown-item" href="part-4.html#bootstrap_grid"><span class="badge rounded-pill bg-buas">4.6</span> The Bootstrap Grid</a>
             </li>
           </ul>
         </li>
