Updated group rubric

--- a/checklist-group.html
+++ b/checklist-group.html
@@ -211,16 +211,15 @@
         <div class="col-sm-6 col-xxl-5 py-3">
           <h3 class="color-buas text-center">Deadlines</h3>
           <ol>
-            <li><strong>First opportunity:</strong> Thursday 14 April 2022 before 23:59</li>
-            <li><strong>Retake opportunity:</strong> Friday 10 June 2022 before 23:59</li>
+            <li><strong>First opportunity:</strong> Friday 14 April 2022 before 18:00</li>
+            <li><strong>Retake opportunity:</strong> Friday 16 June 2022 before 18:00</li>
           </ol>
         </div>
         <div class="col-sm-6 col-xxl-5 py-3 bg-lightblue">
           <h3 class="text-center">Mode of delivery</h3>
           <ul>
             <li>Deliver the actual website by using GitHub pages (see details in Part 1 of the guide).</li>
-            <li>The URL of the website should be on the first page of the justification document.</li>
-            <li>The justifications should be provided in the common justification document on CumLaude.</li>
+            <li>A link to the website, a link to the repository, and a copy of the repository as a zip file must be posted on LMS.</li>
           </ul>
         </div>
         <div class="col-sm-6 col-xxl-5 py-3">
@@ -229,21 +228,21 @@
           <ul>
             <li>A highly visual <strong>landing page</strong></li>
             <li>The brand’s <strong>vision and mission</strong></li>
+            <li>The brands <strong>visual identity</strong>: logo, icons and style guide</li>
+            <li>The <strong></strong>4/5 pieces of copy</strong> developed within the Content unit of the project.</li>
             <li>Information about the brand’s <strong>products and/or services</strong></li>
             <li>Contact information and links to <strong>relevant social media</strong></li>
             <li>Information about the <strong>team</strong></li>
+            <li>A list of <strong>funding tiers</strong>, with associated rewards.</li>
+            <li>Material used to assess other units, as part of the <strong>corporate</strong> page</li>
           </ul>
-          <p>In addition to these mandatory elements, please choose at least one advanced feature for your website:</p>
-          <ul>
-            <li>A product <strong>gallery/webshop</strong> <em>or</em></li>
-            <li>A <strong>comparison tool</strong> which explains the differences between your offers <em>or</em></li>
-            <li>A <strong>contest</strong> where you call for relevant User-Generated Content (UGC) <em>or</em></li>
-            <li>A <strong>testimonial</strong> page where reviews help your audience choose your product</li>
-          </ul>
-          <p>The website must be designed with your target audience in mind. Apart from the corporate section, is not an investor website but should appeal directly to your personas.</p>
+          <p>
+            The website must be designed with your target audience in mind.
+            As a “crowdfunding” website, it should appeal to individuals who would want to fund your project in exchange for rewards that you need to define.
+          </p>
         </div>
         <div class="col-sm-6 col-xxl-5 py-3 bg-lightorange">
-          <h3 class="text-center">Content of the justification document</h3>
+          <h3 class="text-center">Content of the justifications</h3>
           <p>As part of the main PRJ4 justification document, you will deliver justifications for your web design choices.</p>
           <p>The “website justifications” chapter will contain 2 parts:</p>
           <ol>
@@ -253,7 +252,14 @@
                 <li>Font choices</li>
                 <li>User interface patterns (e.g. grids, carousels, menu organizations etc.)</li>
                 <li>The structure of the navigation and content (e.g. how content units are distributed across pages)</li>
-                <li>A scanned paper prototype</li>
+                <li>All these elements must be justified by referring to the theory and/or vocabulary of design</li>
+                <li>These elements should also be related to other units, for example:
+                  <ul>
+                    <li>How does website design fit the values and personality of the brand?</li>
+                    <li>How does website design fit the marketing and communication strategy?</li>
+                    <li>How does website design help showcase the unique value proposal of the product?</li>
+                    </ul>
+                  </li>
               </ul>
             </li>
             <li>A testing report, including:
@@ -271,7 +277,7 @@
                     <li>Issues and positive points that have been identified, ranked by importance.</li>
                   </ul>
                 </li>
-                <li>Improvements that have been conducted on the final website.</li>
+                <li>Improvements that have been implemented on the final website (or that would be implemented if doing so would be too complex)</li>
               </ul>
             </li>
           </ol>
@@ -301,6 +307,7 @@
                 <td class="text-center">
                   <h6>Pass/Fail</h6>
                   <p class="fs-1 lh-1 m-0">
+                  <p class="fs-1 lh-1 m-0">
                     <input class="form-check-input m-0" type="checkbox" value="" aria-label="Content updated">
                   </p>
                 </td>
@@ -313,7 +320,7 @@
                     <input class="form-check-input m-0" type="checkbox" value="" aria-label="Content updated">
                   </p>
                 </td>
-                <td>A scan of a paper prototype is delivered.</td>
+                <td>A link to the website, a link to the repository, and a copy of the repository as a zip file are posted on LMS.</td>
               </tr>
               <tr class="bg-primary bg-opacity-25">
                 <th rowspan="6" class="text-center bg-info bg-opacity-25">
@@ -339,13 +346,13 @@
                   <h4 class="m-0">25%</h4>
                   <p>of production unit</p>
                 </td>
-                <td>Provides access to all required content in a way that is well structured, easy to navigate, consistent and intuitive.</td>
+                <td>Follows good practices in file management, with all necessary assets located in correctly named folders and all unused assets removed from the final delivery.</td>
               </tr>
               <tr class="bg-info bg-opacity-25">
-                <td>Uses grids, margins and alignments to achieve a clean and professional look and feel.</td>
+                <td>Follows good practices in coding, with the use of appropriate semantic tags, headers, and links to libraries.</td>
               </tr>
               <tr class="bg-info bg-opacity-10">
-                <td>Uses contrast, font sizes and font families to achieve good legibility at all screen sizes from mobile to desktop.</td>
+                <td>Follows good practices in image management, choosing the right format (JPEG, PNG, SVG) for the right type of content and resizing images to optimize loading times.</td>
               </tr>
               <tr class="bg-warning bg-opacity-25">
                 <th rowspan="5" class="text-center bg-danger bg-opacity-10">
@@ -374,7 +381,7 @@
                 <td>Describes issues found through testing with the website, both positive and negative, and sorts them based on level of importance.</td>
               </tr>
               <tr class="bg-danger bg-opacity-25">
-                <td>Describes how the final website has improved thanks to testing.</td>
+                <td>Describes how the final website has improved and/or could be further improved thanks to the outcome of testing.</td>
               </tr>
             </tbody>
           </table>
