--- a/checklist-group.html
+++ b/checklist-group.html
@@ -210,15 +210,20 @@
         <div class="col-sm-6 col-xxl-5 py-3">
           <h3 class="color-buas text-center">Deadlines</h3>
           <ol>
-            <li><strong>First opportunity:</strong> Friday 14 April 2022 before 18:00</li>
-            <li><strong>Retake opportunity:</strong> Friday 16 June 2022 before 18:00</li>
+            <li><strong>First opportunity:</strong> Friday 14 April 2023 before 18:00</li>
+            <li><strong>Retake opportunity:</strong> Friday 9 June 2023 before 18:00</li>
           </ol>
         </div>
         <div class="col-sm-6 col-xxl-5 py-3 bg-lightblue">
           <h3 class="text-center">Mode of delivery</h3>
           <ul>
             <li>Deliver the actual website by using GitHub pages (see details in Part 1 of the guide).</li>
-            <li>A link to the website, a link to the repository, and a copy of the repository as a zip file must be posted on LMS.</li>
+            <li>
+              <p class="mb-1">A copy of the repository as a zip file must be posted on CumLaude/LMS.</p>
+              <p class="mb-1">This is done by going to your GitHub repository and clicking on “Code” then “Download ZIP”. Please rename your zip file according to the convention below:</p>
+                <p class="font-monospace mb-1 ms-4">coursenumber_<wbr>academicyear_<wbr>classnumber_<wbr>groupnumber_<wbr>assignmentname</p>
+                <p class="mb-1 ms-4">Example:  <span class="font-monospace">PRJ4_<wbr>2223_<wbr>class2_<wbr>group3_<wbr>website.zip</span></p>
+            </li>
           </ul>
         </div>
         <div class="col-sm-6 col-xxl-5 py-3">
@@ -226,71 +231,33 @@
           <p>The website should be structured to offer access to all the following information (which can be spread in one or multiple pages/screens, depending on students’ design choices):</p>
           <ul>
             <li>A highly visual <strong>landing page</strong></li>
-            <li>The brand’s <strong>vision and mission</strong></li>
+            <li>The brand’s <strong>vision and values</strong></li>
             <li>The brands <strong>visual identity</strong>: logo, icons and style guide</li>
-            <li>The <strong></strong>4/5 pieces of copy</strong> developed within the Content unit of the project.</li>
+            <li>The 4/5 pieces of <strong>copy</strong> developed within the Content unit of the project.</li>
             <li>Information about the brand’s <strong>products and/or services</strong></li>
             <li>Contact information and links to <strong>relevant social media</strong></li>
             <li>Information about the <strong>team</strong></li>
             <li>A list of <strong>funding tiers</strong>, with associated rewards.</li>
-            <li>Material used to assess other units, as part of the <strong>corporate</strong> page</li>
+            <li>Material used for assessment, as part of the <strong>corporate</strong> page</li>
           </ul>
+        </div>
+        <div class="col-sm-6 col-xxl-5 py-3 bg-lightorange">
+          <h3 class="text-center">Audience</h3>
           <p>
             The website must be designed with your target audience in mind.
             As a “crowdfunding” website, it should appeal to individuals who would want to fund your project in exchange for rewards that you need to define.
           </p>
-        </div>
-        <div class="col-sm-6 col-xxl-5 py-3 bg-lightorange">
-          <h3 class="text-center">Content of the justifications</h3>
-          <p>As part of the main PRJ4 justification document, you will deliver justifications for your web design choices.</p>
-          <p>The “website justifications” chapter will contain 2 parts:</p>
-          <ol>
-            <li>A list of design elements alongside their justifications:
-              <ul>
-                <li>A colour scheme (with colour codes)</li>
-                <li>Font choices</li>
-                <li>User interface patterns (e.g. grids, carousels, menu organizations etc.)</li>
-                <li>The structure of the navigation and content (e.g. how content units are distributed across pages)</li>
-                <li>All these elements must be justified by referring to the theory and/or vocabulary of design</li>
-                <li>These elements should also be related to other units, for example:
-                  <ul>
-                    <li>How does website design fit the values and personality of the brand?</li>
-                    <li>How does website design fit the marketing and communication strategy?</li>
-                    <li>How does website design help showcase the unique value proposal of the product?</li>
-                    </ul>
-                  </li>
-              </ul>
-            </li>
-            <li>A testing report, including:
-              <ul>
-                <li>Testing goals</li>
-                <li>The testing methods, i.e.
-                  <ul>
-                    <li>Information about test participants (number, match with target audience, etc.)</li>
-                    <li>Information about the setting (which material is used, is it done remotely, on campus, at home, etc.)</li>
-                    <li>Information about how the test is conducted (what instructions are given, how it is recorded, etc.)</li>
-                  </ul>
-                </li>
-                <li>Testing results
-                  <ul>
-                    <li>Issues and positive points that have been identified, ranked by importance.</li>
-                  </ul>
-                </li>
-                <li>Improvements that have been implemented on the final website (or that would be implemented if doing so would be too complex)</li>
-              </ul>
-            </li>
-          </ol>
-          <p>When writing design justifications, students must clearly relate them to:</p>
-          <ul>
-            <li>The theory and/or vocabulary of design</li>
-            <li>Insight about the audience developed in the other units</li>
-            <li>The marketing, communication and product development strategies developed in other students</li>
-          </ul>
-          <p>The appendix must contain evidence of testing, such as blank consent forms and/or transcripts</p>
+          <h3 class="text-center">Justifications</h3>
+          <p>Justifications for the different units should be delivered directly in the website, as part of a page titled <strong>corporate.html</strong>, which doesn’t need to be matched with your crowdsourcing audience.</p>
+          <p>You can create the justification webpage based on the template at <a href="https://buas-media-interactive.github.io/prj4-group-template/corporate.html" target="_blank">buas-media-interactive.github.io/prj4-group-template</a></p>
 
         </div>
         <div class="col-lg-11 col-xxl-10 py-3">
           <h3 class="text-center color-buas">Assessment criteria</h3>
+          <p>
+            Please note that the assessment criteria below only cover the <strong>Production</strong> unit.
+            Check the project brief for other units.
+          </p>
           <table class="table table-bordered border-dark w-100s">
             <thead>
               <tr>
@@ -356,7 +323,7 @@
               <tr class="bg-warning bg-opacity-25">
                 <th rowspan="5" class="text-center bg-danger bg-opacity-10">
                   <p class="fst-italic fw-normal m-0">Elements assessed through</p>
-                  <p>Justification document</p>
+                  <p>Justifications</p>
                 </th>
                 <th rowspan="2" class="text-center">Website justifications</th>
                 <td rowspan="2" class="text-center">
