--- a/part-1.html
+++ b/part-1.html
@@ -1147,11 +1147,38 @@
               <li class="my-2"><img class="me-1" src="images/part-1/github-desktop.svg" width="30" alt="GitHub Desktop">At this point, your changes are still only on your laptop. You now need to <strong>push</strong> your changes by clicking on the &ldquo;Push&rdquo; button.</li>
               <li class="my-2"><img class="me-1" src="images/part-1/chrome.svg" width="30" alt="Browser">Clicking on &ldquo;View on GitHub&rdquo; opens a browser window and lets you see what is online. Check that all your changes have been uploaded to the cloud.</li>
               <li class="my-2"><img class="me-1" src="images/part-1/chrome.svg" width="30" alt="Browser">Now your resumé should be ready to publish. Go to the repository&rsquo;s <strong>Settings</strong>, then to the <strong>Pages</strong> subsection. Choose the main branch as the source, then click on Save.</li>
-              <li class="my-2"><img class="me-1" src="images/part-1/chrome.svg" width="30" alt="Browser">You should now see a green check mark (see below) and the URL for your website. Wait about 1 minute for the website to be fully published, then click on the link and visit your first published website!</li>
+              <li class="my-2"><img class="me-1" src="images/part-1/chrome.svg" width="30" alt="Browser">
+                Wait a minute and refresh your browser window (using
+                <span class="border border-secondary px-1 rounded">F5</span>
+                or the
+                <svg xmlns="http://www.w3.org/2000/svg" height="16" viewBox="4 4 16 16" width="16">
+                  <path fill="#808080" d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"/>
+                </svg>
+                button). You should now see the confirmation box below and the URL for your website. Click on the link and visit your first published website!</li>
             </ol>
-            <div class="alert alert-success my-3">
-              <img src="images/common/check.svg" alt="success">
-              Your site is published at <a href="https://buas-media-interactive.github.io/prj4-cv/" target="_blank">https://buas-media-interactive.github.io/prj4-cv/</a>
+            <div class="border border-gray border-1 rounded my-2 p-3 gap-3 d-flex flex-items-center flex-wrap">
+              <div class="d-flex flex-column flex-auto">
+                <span class="fw-bold">Your site is live at <a href="https://buas-media-interactive.github.io/prj4-cv/" class="text-decoration-none">https://buas-media-interactive.github.io/prj4-cv/</a></span>
+                  <span class="f6 text-muted m-0">
+                    Last <a href="#" class="text-decoration-none">deployed</a>
+                    by <img class="v-align-middle rounded-circle" src="https://avatars.githubusercontent.com/u/1217834?s=28&amp;v=4" alt="@raphv" width="14" height="14">
+                    <a href="https://github.com/raphv" class="text-decoration-none">raphv</a>
+                    February 1, 2023 10:00
+                  </span>
+              </div>
+              <div class="d-flex flex-nowrap gap-2">
+                <a href="https://buas-media-interactive.github.io/prj4-cv/" target="_blank" class="flex-self-start btn btn-light border-secondary border-opacity-25">
+                  <svg height="16" viewBox="0 0 16 16" version="1.1" width="16">
+                    <path fill-rule="evenodd" d="M10.604 1h4.146a.25.25 0 01.25.25v4.146a.25.25 0 01-.427.177L13.03 4.03 9.28 7.78a.75.75 0 01-1.06-1.06l3.75-3.75-1.543-1.543A.25.25 0 0110.604 1zM3.75 2A1.75 1.75 0 002 3.75v8.5c0 .966.784 1.75 1.75 1.75h8.5A1.75 1.75 0 0014 12.25v-3.5a.75.75 0 00-1.5 0v3.5a.25.25 0 01-.25.25h-8.5a.25.25 0 01-.25-.25v-8.5a.25.25 0 01.25-.25h3.5a.75.75 0 000-1.5h-3.5z"></path>
+                  </svg>
+                  Visit site
+                </a>
+                <button class="btn btn-light border-secondary border-opacity-25 px-2">
+                  <svg height="16" viewBox="0 0 16 16" version="1.1" width="16">
+                    <path d="M8 9a1.5 1.5 0 100-3 1.5 1.5 0 000 3zM1.5 9a1.5 1.5 0 100-3 1.5 1.5 0 000 3zm13 0a1.5 1.5 0 100-3 1.5 1.5 0 000 3z"></path>
+                  </svg>
+                </button>
+              </div>
             </div>
           </div>
           <div class="col-lg-6 col-xxl-5 p-3 px-md-5 px-lg-3 px-xxl-4 bg-lightorange">
