Fixed broken link

--- a/part-4.html
+++ b/part-4.html
@@ -326,7 +326,7 @@
               <li>An up and running web page, whose URL you know.</li>
               <li>A Google account, which you already have if you use GMail or an Android phone.</li>
             </ul>
-            <p>Go to <a href="" target="_blank">https://analytics.google.com/</a>. If you're not logged in with your Google Account, start by doing so.</p>
+            <p>Go to <a href="https://analytics.google.com/" target="_blank">https://analytics.google.com/</a>. If you're not logged in with your Google Account, start by doing so.</p>
             <p>You will then have to create an "Analytics Account" (in the Admin section of the Analytics site) and then create a "Property" which represents your website.</p>
             <p>To bring data from your website to your Google Analytics account, you will need to add a bit of code to your website. You can find that code under "Tagging instructions", "Global site tag (gtag.js)"</p>
             <p>Paste that HTML code into your landing page and synchronize it by using the "save, commit, push" GitHub desktop workflow.</p>
